tests/NormalTests/paczka1/fuzzy1/25906455.err
Error in line 5: VDLj S635 48,8
Error in line 17: IJwC S806 22,2
Error in line 29: au6hS6 A831 -2,6
Error in line 28: au6hS6 A831 34,3
